# SO-2022-ISEC

./: .gitignore  CMakeLists.txt  Frontend  Makefile  backend  backend.c  backend.h  communication.h  frontend  frontend.c  frontend.h  itemteste.txt  prome.txt  support_structures.h  teste.c  time.txt  users_lib.h  utilizadores.txt
